<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.CLM.MainActivity" >

	<item
        android:id="@+id/action_back"
        android:showAsAction="always"
        android:title="@string/action_back"
        android:icon="@drawable/ic_action_back"></item>
    
	<item
        android:id="@+id/action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"></item>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_info"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_info"/>
</menu>
